fix layout bug

--- a/frontend/assets/styles/index.css
+++ b/frontend/assets/styles/index.css
@@ -1,5 +1,17 @@
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
+  width: 100vw;
+}
+
 main {
   min-height: 80vh;
+}
+section {
+  padding: 4rem 0;
 }
 
 .rating span {
