--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -1,6 +1,6 @@
 .background-video {
   width: 100%;
-  height: 120px; /* Adjust height as needed */
+  height: 120px;
   overflow: hidden;
 }
 
@@ -15,79 +15,7 @@
   left: 0;
   min-width: 800px;
   width: 100%;
+
   height: auto;
   z-index: -1;
-}
-
-.background-video button {
-  margin-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-family: "Playfair Display", serif;
-  font-size: 15px;
-}
-
-.background-words {
-  font-family: "Playfair Display", serif;
-  color: white;
-}
-
-@media screen and (max-width: 575px) {
-  .background-video {
-    width: 100%;
-    height: 150px;
-    overflow: hidden;
-  }
-
-  .background-words {
-    font-size: 1.3em;
-  }
-}
-
-@media screen and (min-width: 576px) and (max-width: 767px) {
-  .background-video {
-    width: 100%;
-    height: 160px;
-    overflow: hidden;
-  }
-
-  .background-words {
-    font-size: 1.5em;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  .background-video {
-    width: 100%;
-    height: 220px;
-    overflow: hidden;
-  }
-
-  .background-words {
-    font-size: 2em;
-  }
-}
-
-@media screen and (min-width: 992px) and (max-width: 1199px) {
-  .background-video {
-    width: 100%;
-    height: 320px;
-    overflow: hidden;
-  }
-}
-
-@media screen and (min-width: 1200px) and (max-width: 1400px) {
-  .background-video {
-    width: 100%;
-    height: 440px;
-    overflow: hidden;
-  }
-}
-
-@media screen and (min-width: 1401px) {
-  .background-video {
-    width: 100%;
-    height: 680px;
-    overflow: hidden;
-  }
 }
